Set image max-width to 100% of its parent to prevent overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -7201,6 +7201,10 @@ body {
   }
 }
 
+img {
+  max-width: 100%;
+}
+
 h1,
 .h1 {
   font-weight: bold;
